# segurotenerife

./: .env.example  .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  DEAD_CODE_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  TEST_RESULTS.md  docker-compose.yml  railway.toml
.github/workflows/: deploy-frontend.yml
backend/: .gitignore  Cargo.toml  Dockerfile  railway.toml
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  error.rs  knowledge.rs  langfuse.rs  main.rs  origin.rs  rate_limit.rs  telegram.rs
backend/src/routes/: auth.rs  chat.rs  events.rs  handoff.rs  health.rs  leads.rs  mod.rs  telegram.rs
docs/: AGENTS.md  REPRODUCTION_PLAYBOOK.md  deploy.md  index.md
docs/ai/: rag-agent.md
docs/architecture/: astro-web.md  lead-flow.md
docs/monitoring/: index.md  observability.md
docs/seo/: domain-research.md  index.md
docs/testing/: index.md  qa-llm-personas.md
docs/ux/: improvement-plan.md  user-stories.md  ux-audit.md  ux-review.md
frontend/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.preset.cjs  tsconfig.base.json  vitest.config.ts
frontend/apps/admin/: index.html  package.json  tailwind.config.cjs  tsconfig.json  (+1 more)
frontend/e2e/: README.md  chat-shots.mjs  shots.mjs
frontend/scripts/: og-image.mjs  seo-prerender.mjs
knowledge-base/: README.md
knowledge-base/asisa/: SOURCES.md  catalog.json  index.json  residency-visa.md  schema.json  services.json
scripts/: qa-personas.mjs  qa-supplemental.mjs
scripts/load/: run-local.sh  smoke.js
(+184 files in other folders)
