[package]
name = "seguro-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seguro-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Аутентификация менеджера: JWT (access/refresh) + argon2-проверка пароля.
# Refresh-cookie выставляем/читаем через сырые заголовки (Set-Cookie / Cookie),
# без отдельного cookie-крейта — на одном менеджере этого достаточно.
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1"
thiserror = "1"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
